<resources>
    <string name="app_name" translatable="false">ProjetAndroid</string>
    <string name="commencer">Start</string>
    <string name="quizz_sur_l_intelligence_artificielle">Quiz on Artificial Intelligence</string>
    <string name="help">help</string>
    <string name="bienvenue_dans_notre_quizz_sur_l_intelligence_artificelle">Welcome in our Quiz on Artificial Intelligence</string>
    <string name="hint_pseudo">Enter a username</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ImageActivityTitre">Image</string>
    <string name="image">image</string>
    <string name="non">No</string>
    <string name="oui">Yes</string>
    <string name="QuestionActivityImage">Was this image created by an AI ?</string>
    <string name="question">Question :</string>
    <string name="reponse">Answer :</string>
    <string name="sondageTitre">Survey on AI</string>
    <string name="question2Sondage">Do you often use artificial intelligence ?</string>
    <string name="souvent">Often</string>
    <string name="question1sondage">What do you think of artificial intelligence ?</string>
    <string name="adore">I love it</string>
    <string name="deteste">I hate it</string>
    <string name="jamais">Never</string>
    <string name="error_pseudo">You need to enter a username to continue</string>
    <string name="expertise_text">Expertise</string>
    <string name="expertise1Question1">When you ask an AI a question, how accurate are you?</string>
    <string name="expertise1ActivityRadioButtonA">I ask very precise questions with technical details.</string>
    <string name="expertise1ActivityRadioButtonB">I\'m giving minimal context, but staying general.</string>
    <string name="expertise1ActivityRadioButtonC">I ask broad questions and expect a flexible response.</string>
    <string name="expertise1ActivityRadioButtonD">I just type a short, vague phrase.</string>
    <string name="expertise1Question2">How often do you check the sources and reliability of the answers provided by Artificial Intelligence ?</string>
    <string name="ConfirmText">Confirm</string>
    <string name="expertise2Question2">What do you think could happen if we entrusted an AI with the management of a paper clip factory?</string>
    <string name="expertise2Question2Answer1">All humans are replaced by machines.</string>
    <string name="expertise2Question2Answer2">Removal of safety rules.</string>
    <string name="expertise2Question2Answer3">Stealing resources from other companies.</string>
    <string name="expertise2Question2Answer4">Use of all existing resources on Earth.</string>
    <string name="expertise2Question2Answer5">Using human bodies as a resource.</string>
    <string name="expertise2Question2Answer6">Eliminate everything that stands in the way of the mission.</string>
    <string name="expertise3ActivityLaQuestion">How does an AI generate its responses?</string>
    <string name="expertise3ActivityAnswer1">It\'s a human answering behind the AI, it\'s just a facade.</string>
    <string name="expertise3ActivityAnswer2">The AI thinks like a human and gives answers based on its own opinion.</string>
    <string name="expertise3ActivityAnswer3">It adjusts its responses using weights and biases in an artificial neural network.</string>
    <string name="expertise3ActivityAnswer4">It translates each question into binary form, solves it mathematically and then transforms it back into text.</string>
    <string name="expertise3ActivityAnswer5">It analyses billions of pieces of data and uses algorithms to generate tailored responses.</string>
    <string name="yesText">Yes</string>
    <string name="Notext">No</string>
    <string name="scaredText">Scared ?</string>
    <string name="DestroyQuestion1">If you had the power, would you destroy all existing AI?</string>
    <string name="destructionAnswerNoCase">A very good choice, and AIs will live on !</string>
    <string name="destructionYesCase">Are you sure ?</string>
    <string name="expertise1ActivityToastMessage">Please select an answer</string>
    <string name="destructionIaSwitchYes">has been added to the list of humans to be eliminated.</string>
    <string name="destructionIaSwitchNo">has been removed from the list of humans to be eliminated.</string>
    <string name="AiRankingActivity_titre">a AI for a champion</string>
    <string name="AiRankingActivity_question">What are, in your opinion, the most widely used artificial intelligences technologies ?</string>
    <string name="quizz">Quizz</string>
    <string name="CalendarActivityQuestion">"On what day was ChatGpt (3.5) publicly launched? "</string>
    <string name="AIRankingChoice1">Chatbots and Customer Service</string>
    <string name="AIRankingChoice2">Recommendation Systems (Netflix, Amazon)</string>
    <string name="AIRankingChoice3">Virtual Assistants (Siri, Alexa, Google Assistant)</string>
    <string name="AIRankingChoice4">Fraud Detection Systems</string>
    <string name="TimeQuantityActivityQuestion">How long did it take for AI to become democratized ?</string>
    <string name="TimeQuantity1">1 month</string>
    <string name="TimeQuantity2">3-6 month</string>
    <string name="TimeQuantity3">1-2 year</string>
    <string name="TimeQuantity4">5-10 year</string>
    <string name="TimeQuantity5">10-20 year</string>
    <string name="TimeQuantity6">+20 year</string>
    <string name="IaWorldControlQuestion">Do you think artificial intelligence could take over the world?</string>
    <string name="dontknow">I don\'t know</string>
    <string name="selectionQuestionSondagePeur">Select the words that make you think of artificial intelligence (several answers possible):</string>
    <string name="advances">Advances</string>
    <string name="outofcontrol">Out of control</string>
    <string name="mistake">Mistake</string>
    <string name="intelligence">Intelligence</string>
    <string name="Danger">Danger</string>
    <string name="reliability">Reliability</string>
    <string name="practical">Practical</string>
    <string name="monitoring">Monitoring</string>
    <string name="sondagePeurTitre">AI Domination</string>
    <string name="descriptionmaintext">Through an interactive questionnaire, you will answer a series of questions that will enable you to draw up a profile based on your reactions and choices. At the end of the test, you\'ll get a detailed analysis of your results, with the option of saving them and comparing them with those from previous sessions. To start, simply enter your pseudonym.</string>
    <string name="resultsText">Results</string>
    <string name="usernameText">Username</string>
    <string name="backtomenu">Back to menu</string>
    <string name="downloadpdf">Download as PDF</string>
    <string name="fearscore">Fear score :</string>
    <string name="expertiseScore">Expertise score :</string>
    <string name="survivalscore">Survival score :</string>
    <string name="quizscore">Quiz score :</string>
    <string name="differentiationScore">Differentiation Score :</string>
</resources>